<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/top_bar"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:padding="12dp"
            android:src="@drawable/ic_access_bar"
            android:layout_height="50dp" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:textColor="@color/colorTruckContent"
            android:text="@string/instruction"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/menu"
            android:layout_width="50dp"
            android:textColor="@color/colorTruckContent"
            android:text="@string/module_menu"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="14sp"
            android:layout_height="50dp" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="30dp"
                style="@style/InstructionTitle"
                android:text="@string/instruction_title"/>
            <TextView
                style="@style/InstructionContent"
                android:text="@string/instruction_content1"/>
            <TextView
                style="@style/InstructionContent"
                android:text="@string/instruction_content2"/>
            <TextView
                style="@style/InstructionContent"
                android:text="@string/instruction_content3"/>
            <TextView
                style="@style/InstructionContent"
                android:text="@string/instruction_content4"/>
            <TextView
                android:layout_marginBottom="30dp"
                style="@style/InstructionContent"
                android:text="@string/instruction_content5"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>