<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/top_bar"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:padding="12dp"
            android:src="@drawable/ic_access_bar"
            android:layout_height="50dp" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:textColor="@color/colorTruckContent"
            android:text="@string/order_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/menu"
            android:layout_width="50dp"
            android:textColor="@color/colorTruckContent"
            android:text="@string/module_menu"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="14sp"
            android:layout_height="50dp" />
    </RelativeLayout>
    <ScrollView
        android:id="@+id/srcoll"
        android:layout_width="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_below="@id/top_bar"
        android:background="@color/colorBackground"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_marginTop="13dp"
                style="@style/LeaseLayoutStyle">
                <TextView
                    style="@style/LeaseOrderTitle"
                    android:text="@string/get_loc" />
                <ImageView
                    android:id="@+id/get_type_back"
                    style="@style/RightBtn"/>
                <TextView
                    android:id="@+id/get_type"
                    style="@style/LeaseOrderContent"
                    android:text="@string/select_me" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="13dp"
                style="@style/LeaseLayoutNewStyle">
                <TextView
                    android:id="@+id/name"
                    android:text="刘梦楠"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    style="@style/LeaseOrderNew" />
                <TextView
                    android:id="@+id/tel"
                    android:text="13456789076"
                    android:layout_toRightOf="@id/name"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="16dp"
                    style="@style/LeaseOrderNew" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="50dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="16dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_site"
                        android:layout_height="18dp" />
                    <TextView
                        android:id="@+id/loc"
                        android:layout_marginLeft="4dp"
                        android:layout_gravity="center_vertical"
                        android:text="北京市海淀区上地西路大牛大厦4号"
                        android:layout_width="wrap_content"
                        android:textColor="@color/colorTruckContent"
                        android:textSize="12sp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView
                    android:id="@+id/no_address"
                    android:layout_width="match_parent"
                    android:text="@string/select_location"
                    android:gravity="center"
                    android:textColor="@color/colorTruckContent"
                    android:textSize="15sp"
                    android:background="#FFF"
                    android:layout_height="match_parent" />
                <ImageView
                    android:id="@+id/user_message_back"
                    style="@style/RightBtn"/>
            </RelativeLayout>

            <RelativeLayout
                style="@style/LeaseLayoutStyle"
                android:layout_marginTop="13dp">
                <TextView
                    style="@style/LeaseOrderTitle"
                    android:text="@string/get_time" />
                <ImageView
                    android:id="@+id/get_time_back"
                    style="@style/RightBtn"/>
                <TextView
                    android:id="@+id/get_time"
                    style="@style/LeaseOrderContent"
                    android:text="2019-06-28" />
            </RelativeLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:background="#FFF"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginLeft="12dp"
                    android:background="#EEE"/>
            </FrameLayout>
            <RelativeLayout
                style="@style/LeaseLayoutStyle">
                <TextView
                    style="@style/LeaseOrderTitle"
                    android:text="@string/to_time" />
                <ImageView
                    android:id="@+id/to_time_back"
                    style="@style/RightBtn"/>
                <TextView
                    android:id="@+id/to_time"
                    style="@style/LeaseOrderContent"
                    android:text="2019-06-28" />
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/content"
                android:orientation="vertical"
                android:layout_marginTop="13dp"
                android:background="#FFF"
                android:layout_width="match_parent"
                android:minHeight="20dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/empty_view"
                    style="@style/LeaseOrderContent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:minHeight="40dp"
                    android:text="@string/good_empty" />
            </LinearLayout>
            <RelativeLayout
                style="@style/LeaseLayoutStyle"
                android:layout_marginTop="13dp">
                <TextView
                    style="@style/LeaseOrderTitle"
                    android:text="@string/money_count" />
                <TextView
                    android:id="@+id/lease_param"
                    style="@style/LeaseOrderContent"
                    android:layout_marginRight="12dp"
                    android:text="￥0.00" />
            </RelativeLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:background="#FFF"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginLeft="12dp"
                    android:background="#EEE"/>
            </FrameLayout>
            <RelativeLayout
                style="@style/LeaseLayoutStyle">
                <TextView
                    style="@style/LeaseOrderTitle"
                    android:text="@string/lease_count" />
                <TextView
                    android:id="@+id/lease_param_0"
                    style="@style/LeaseOrderContent"
                    android:layout_marginRight="12dp"
                    android:text="￥0.00" />
            </RelativeLayout>
            <RelativeLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                style="@style/LeaseLayoutStyle"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="13dp">
                <TextView
                    android:id="@+id/text_param_p"
                    style="@style/LeaseOrderTitle"
                    android:text="@string/my_desc" />
                <ImageView
                    android:id="@+id/delete_all"
                    style="@style/RightBtn"/>
                <EditText
                    android:id="@+id/edit"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_toRightOf="@id/text_param_p"
                    android:background="@null"
                    android:textSize="14sp"
                    android:textColor="@color/colorTruckContent"
                    android:hint="@string/my_desc_content"
                    android:layout_toLeftOf="@id/delete_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:background="#FFF"
        android:elevation="1dp"
        android:layout_height="50dp">
        <Button
            android:id="@+id/send"
            android:text="@string/send_order"
            android:layout_alignParentRight="true"
            android:textColor="#FFF"
            android:background="@drawable/shape_btn"
            android:layout_width="wrap_content"
            android:minWidth="90dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/text_param0"
            android:layout_width="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_centerVertical="true"
            android:textColor="#3F3F3F"
            android:textSize="11sp"
            android:text="@string/lease_all_sum"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/good_sum"
            android:layout_toRightOf="@id/text_param0"
            android:layout_width="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_centerVertical="true"
            android:textColor="#F15959"
            android:textSize="16sp"
            android:text="￥0.00"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>